# hackathone-2

./: .gitignore  CLAUDE.md  CONSTITUTION.md  README.md  pyproject.toml  vercel.json
.spec-kit/: config.yaml
backend/: CLAUDE.md  main.py  models.py  requirements.txt  vercel.json
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/todos/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts
specs/features/: task-crud.md
src/: main.py
